# MuJoco_Simulation

./: CMakeLists.txt  README.md
.history/src/: controller_20230901180108.cpp  controller_20231124105030.cpp  controller_20231124105042.cpp  controller_20231124105100.cpp  controller_20231205143848.cpp  controller_20231205143919.cpp  controller_20231205144051.cpp  controller_20231205144054.cpp  controller_20231205144116.cpp  controller_20231205144231.cpp  controller_20231205144419.cpp  controller_20231205144457.cpp  controller_20231205144615.cpp  controller_20231205144708.cpp  controller_20231205144815.cpp  controller_20231205144927.cpp  controller_20231205145022.cpp  controller_20231205145104.cpp  controller_20231205145734.cpp  controller_20231205145743.cpp  controller_20231205150122.cpp  main_20230901174749.cc  main_20231205150006.cc  main_20231205150025.cc
.lh/: CMakeLists copy.txt.json  CMakeLists.txt.json  frankaEnv copy.py.json  frankaEnv.py.json  main.py.json  simulate.py.json  train.py.json
.lh/include/: controller.h.json  cuda(save_file).cuh.json  cuda.cuh.json
.lh/model/: fr3.urdf.json  fr3.xml.json
.lh/pybind11/: CMakeLists.txt.json
.lh/pybind11/tools/: pybind11Common.cmake.json  pybind11Tools.cmake.json
.lh/src/: controller.cpp.json  cuda(save_file).cu.json  cuda(ver, alpha,beta).cu.json  cuda.cu.json  main.cc.json  robotmodel.cpp.json  simulate.cpp.json
include/: controller.h  robotmodel.h
model/: fr3.urdf  fr3.xml  panda.urdf  panda.xml  panda_arm_hand copy.urdf  panda_arm_hand.urdf  panda_arm_hand.xml  panda_cc.xml
model/franka_emika_panda/: assets_fr3.xml  assets_handle.xml  assets_handle_7.xml  assets_valve.xml  mjinclude_fr3.xml  mjinclude_handle.xml  mjinclude_valve.xml  scene_valve.xml
mujoco-2.3.3/: THIRD_PARTY_NOTICES
mujoco-2.3.3/lib/: libmujoco.so.2.3.3
mujoco-2.3.3/simulate/: simulate.cc  simulate.h
src/: controller.cpp  main.cc  quadraticprogram.cpp  robotmodel.cpp  simulate.cpp
